infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pollen8-service
  labels:
    app: pollen8
spec:
  selector:
    app: pollen8
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
